# 3bep-open-science-archive

./: .gitignore  README.md  README.pt-br.md  REFERENCES.md  TESTS.md  VERIFY.md  crossplatform_linux_results.txt  tests.md
.github/ISSUE_TEMPLATE/: cross_platform_verification.md
.github/workflows/: 3bep_audit_bot.yml
cli_3bep/: Cargo.toml
cli_3bep/examples/: kepler_orbit.json  kepler_orbit_results.json
cli_3bep/src/: certificate.rs  config.rs  f64_compare.rs  main.rs  report.rs  runner.rs  sha256.rs
core_engine/: Cargo.toml
core_engine/examples/: example_1_stable_orbit.rs  extreme_stress_test.rs
core_engine/src/: lib.rs
core_engine/src/physics/: constants.rs  leapfrog.rs  mod.rs  nbody.rs  rk4.rs  vector3.rs
core_engine/tests/: angular_momentum.rs  chaos_3body.rs  convergence_order.rs  elliptical_orbit.rs  energy_conservation.rs  f64_divergence.rs  gw_cross_correlation.rs  kepler_validation.rs  leapfrog_conservation.rs  momentum_conservation.rs  nbody_scalability.rs  singularity_stress.rs  time_reversibility.rs  vector_math.rs
preprint_archaeology/: README.md
preprint_archaeology/aiVixra_2604_0039/: audit_report.md  gw150914_background_distribution.csv  gw150914_correlation_results.csv  gw150914_f64_divergence_evidence.txt  gw_causality_validation.csv  gw_colored_noise_results.csv  gw_matched_filter_comparison.csv  gw_multi_event_comparison.csv
preprint_archaeology/arXiv_2603_24675/: audit_report.md  f64_divergence_evidence.txt  lyapunov_3body_chaotic.bep  lyapunov_3body_chaotic_perturbed.bep  (+4 more)
scripts/: README.md
scripts/astro/: binary_star.bep  (+3 more)
(+6 files in other folders)
