[package]
name = "cli_3bep"
version = "0.1.0"
edition = "2021"
authors = ["3BEP Labs <opensource@3beplabs.com>"]
description = "Zero-friction CLI for deterministic physics validation. JSON in, truth out."
repository = "https://github.com/3beplabs/3bep-open-science-archive"
license = "AGPL-3.0-or-later"

[[bin]]
name = "3bep"
path = "src/main.rs"

[dependencies]
core_engine = { path = "../core_engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
